--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background: linear-gradient(rgb(0,0,0,0.6),rgb(0,0,0,0.7)),url('water-conservation-droplet.jpg');
+    background: linear-gradient(rgb(0,0,0,0.6),rgb(0,0,0,0.7)),url('x51Hjz.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
