--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p{
 .button
 {
     border: 1px solid #ffffff;
-    color: #efeff3;
+    color:  #e4e4ec;
     margin-right: 2%;
     padding: 10px 30px;
     transition: 0.4s ease;
